# orbit

./: .gitmodules  README.md  example.py  pyproject.toml
.github/workflows/: release.yml
orbit/: __init__.py  agents.py  daemon.py  journal.py  prompts.py  runner.py
orbit/_tools/: clipboard.py  filesystem.py  hitl.py  hotkey.py  search.py  ui.py
orbit/_ui/: toast.py
